must-gather.local.7541592903822836477/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-ccdc0abcf68b276b781a774d7630503a6b323c7cedea8e5636b09dd759dd226a/namespaces/openshift-monitoring/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/description: Expose the `/api` endpoints of the `alertmanager-main`
        service via a router.
      openshift.io/host.generated: "true"
    creationTimestamp: "2024-06-11T11:11:31Z"
    labels:
      app.kubernetes.io/managed-by: cluster-monitoring-operator
      app.kubernetes.io/part-of: openshift-monitoring
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:openshift.io/description: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/part-of: {}
        f:spec:
          f:path: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: operator
      operation: Update
      time: "2024-06-11T11:11:31Z"
    name: alertmanager-main
    namespace: openshift-monitoring
    resourceVersion: "32163"
    uid: db2d3728-a6cf-4666-9281-dd9cc5e7aefb
  spec:
    host: alertmanager-main-openshift-monitoring.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
    path: /api
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: alertmanager-main
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2024-06-11T11:11:31Z"
        status: "True"
        type: Admitted
      host: alertmanager-main-openshift-monitoring.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerCanonicalHostname: router-default.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/description: Expose the `/api` endpoints of the `prometheus-k8s`
        service via a router.
      openshift.io/host.generated: "true"
    creationTimestamp: "2024-06-11T11:11:31Z"
    labels:
      app.kubernetes.io/managed-by: cluster-monitoring-operator
      app.kubernetes.io/part-of: openshift-monitoring
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:openshift.io/description: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/part-of: {}
        f:spec:
          f:path: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: operator
      operation: Update
      time: "2024-06-11T11:11:31Z"
    name: prometheus-k8s
    namespace: openshift-monitoring
    resourceVersion: "32165"
    uid: 466cec6e-48bf-4c67-b7bb-34b8361ce102
  spec:
    host: prometheus-k8s-openshift-monitoring.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
    path: /api
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: prometheus-k8s
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2024-06-11T11:11:31Z"
        status: "True"
        type: Admitted
      host: prometheus-k8s-openshift-monitoring.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerCanonicalHostname: router-default.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/description: Expose the `/federate` endpoint of the `prometheus-k8s`
        service via a router.
      openshift.io/host.generated: "true"
    creationTimestamp: "2024-06-11T11:11:32Z"
    labels:
      app.kubernetes.io/managed-by: cluster-monitoring-operator
      app.kubernetes.io/part-of: openshift-monitoring
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:openshift.io/description: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/part-of: {}
        f:spec:
          f:path: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: operator
      operation: Update
      time: "2024-06-11T11:11:32Z"
    name: prometheus-k8s-federate
    namespace: openshift-monitoring
    resourceVersion: "32175"
    uid: 3e7e10d2-4d22-4fc3-953c-6d0cde33c182
  spec:
    host: prometheus-k8s-federate-openshift-monitoring.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
    path: /federate
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: prometheus-k8s
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2024-06-11T11:11:32Z"
        status: "True"
        type: Admitted
      host: prometheus-k8s-federate-openshift-monitoring.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerCanonicalHostname: router-default.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/description: Expose the `/api` endpoints of the `thanos-querier`
        service via a router.
      openshift.io/host.generated: "true"
    creationTimestamp: "2024-06-11T11:11:31Z"
    labels:
      app.kubernetes.io/component: query-layer
      app.kubernetes.io/instance: thanos-querier
      app.kubernetes.io/managed-by: cluster-monitoring-operator
      app.kubernetes.io/name: thanos-query
      app.kubernetes.io/part-of: openshift-monitoring
      app.kubernetes.io/version: 0.35.0
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:openshift.io/description: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/part-of: {}
            f:app.kubernetes.io/version: {}
        f:spec:
          f:path: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: operator
      operation: Update
      time: "2024-06-11T11:11:31Z"
    name: thanos-querier
    namespace: openshift-monitoring
    resourceVersion: "32164"
    uid: d2a7770f-804c-4704-94b9-e9683470aad0
  spec:
    host: thanos-querier-openshift-monitoring.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
    path: /api
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: thanos-querier
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2024-06-11T11:11:31Z"
        status: "True"
        type: Admitted
      host: thanos-querier-openshift-monitoring.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerCanonicalHostname: router-default.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "39961"
